2008-03-06  Sanel <karijes@users.sourceforge.net>

	* Updated test/perf/stringtok.cpp to the latest changes
	* Added strsplit.{h,cpp} as comparison with stringtok()

2008-03-04  Sanel <karijes@users.sourceforge.net>

	* Added findfile.m4, pkg.m4 and dbus.m4 macros. Mostly for D-BUS
	detection. D-BUS will be first detected via pkg-config; if pkg-config does
	not exists, configure will manually scan known places for headers and
	libraries
	* Removed dir_remove_rec(). Hoping some day I will add better code.
	* Replaced DIR_SEPARATOR and DIR_SEPARATOR_STR with E_DIR_SEPARATOR and
	E_DIR_SEPARATOR_STR all over the code 
	* Added dir_create_with_parents() with the tests

2008-02-26  Sanel <karijes@users.sourceforge.net>

	* Completed Time class with removal of millisecond member
	* In tests/util.cpp, before environmet vars are changed, they are saved
	first and later restored. That also caused removal of warning message
	* Revised TODO file
	* Revised DesktopFile.h documentation

2008-02-25  Sanel <karijes@users.sourceforge.net>

	* Documented Time class
	* Added system_set() in Time class
	* Time member set() returns nothing now
	* Small addition in Date's system_set() so settimeofday() don't fail

2008-02-24  Sanel <karijes@users.sourceforge.net>

	* Added E_RETURN_IF_FAIL and E_RETURN_VAL_IF_FAIL macros
	* Little reformatting in xdgmime.h
	* Fixed issue with update_settings() in Window.cpp; when client calls this
	with receiver uid, receiver will get event even if client immediately
	hides itself. Previously this wasn't the case.
	* Added double_buffer() member in Window
	* Revised Window documentation and cleaned unused code in Window.cpp

2008-02-23  Sanel <karijes@users.sourceforge.net>

	* Added _edelib_assert()
	* Default debug macros are E_DEBUG, E_ASSERT, E_STRLOC, E_FATAL, althought
	rest of the code need to be changed to reflect this changes
	* Pretty print when stack is dumped
	* Efatal (and the rest) is changed to _edelib_fatal() and similar
